# Copyright 2020 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_pkg//:pkg.bzl", "pkg_tar", "pkg_zip")

pkg_tar(
    name = "release",
    testonly = True,
    srcs = [
        ":all_files",
    ],
    extension = "tar.gz",
    package_base = "",
    package_dir = "/",
    package_file_name = "rules_sqlc-VERSION.tar.gz",
    strip_prefix = "NONE",  # Prevent flattening of archive
    visibility = [":__subpackages__"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "LICENSE",
        "README.md",
        "WORKSPACE",
        "//docs:sqlc_package-docs",
        "//docs:sqlc_provider-docs",
        "//sqlc:all_files",
    ],
    visibility = ["//visibility:public"],
)
