# Copyright 2020 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "docs",
    srcs = ["docs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//sqlc:def",
    ],
)

stardoc(
    name = "sqlc_package-docs",
    out = "rules.md",
    input = "docs.bzl",
    symbol_names = [
        "sqlc_package",
    ],
    deps = [":docs"],
)

stardoc(
    name = "sqlc_provder-docs",
    out = "providers.md",
    input = "docs.bzl",
    symbol_names = [
        "SQLCRelease",
    ],
    deps = [":docs"],
)
