# Copyright 2020 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//sqlc:def.bzl", "sqlc_package")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/plezentek/bazel-sqlc/tests/core/multiple_query_files
gazelle(name = "gazelle")

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

sqlc_package(
    name = "multiple_query_files_sqlc",
    package = "database",
    queries = [
        "query_one.sql",
        "query_two.sql",
    ],
    schema = ["schema.sql"],
)

go_library(
    name = "multiple_query_files_database",
    srcs = [":multiple_query_files_sqlc"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/core/multiple_query_files/database",
    visibility = [":__subpackages__"],
)

go_library(
    name = "multiple_query_files_library",
    srcs = ["main.go"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/core/multiple_query_files",
    visibility = ["//visibility:private"],
)

go_test(
    name = "multiple_query_files_test",
    srcs = ["multiple_query_files_test.go"],
    embed = [":multiple_query_files_library"],
    visibility = ["//visibility:public"],
    deps = [
        ":multiple_query_files_database",
    ],
)

test_suite(
    name = "multiple_query_files",
    tests = [
        "multiple_query_files_test",
    ],
)
