# Copyright 2020 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//sqlc:def.bzl", "sqlc_package")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/plezentek/bazel-sqlc/tests/features/empty_slices
gazelle(name = "gazelle")

sqlc_package(
    name = "empty_slices_enabled_sqlc",
    emit_empty_slices = True,
    package = "database",
    queries = ["query.sql"],
    schema = ["schema.sql"],
)

sqlc_package(
    name = "empty_slices_disabled_sqlc",
    emit_empty_slices = False,
    queries = ["query.sql"],
    schema = ["schema.sql"],
)

sh_test(
    name = "empty_slices_enabled",
    srcs = ["empty_slices_enabled_test.sh"],
    args = ["$(locations :empty_slices_enabled_sqlc)"],
    data = [
        ":empty_slices_enabled_sqlc",
    ],
)

sh_test(
    name = "empty_slices_disabled",
    srcs = ["empty_slices_disabled_test.sh"],
    args = ["$(locations :empty_slices_disabled_sqlc)"],
    data = [
        ":empty_slices_disabled_sqlc",
    ],
)

test_suite(
    name = "empty_slices",
    tests = [
        "empty_slices_disabled",
        "empty_slices_enabled",
    ],
)
