# Copyright 2020 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//sqlc:def.bzl", "sqlc_package")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/plezentek/bazel-sqlc/tests/features/engine
gazelle(name = "gazelle")

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

sqlc_package(
    name = "engine_postgresql_sqlc",
    engine = "postgresql",
    package = "postgresql_database",
    queries = ["query_postgresql.sql"],
    schema = ["schema_postgresql.sql"],
)

sqlc_package(
    name = "engine_mysql_sqlc",
    engine = "mysql",
    package = "mysql_database",
    queries = ["query_mysql.sql"],
    schema = ["schema_mysql.sql"],
)

go_library(
    name = "engine_postgresql_database",
    srcs = [":engine_postgresql_sqlc"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/engine/postgresql_database",
    visibility = [":__subpackages__"],
)

go_library(
    name = "engine_mysql_database",
    srcs = [":engine_mysql_sqlc"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/engine/mysql_database",
    visibility = [":__subpackages__"],
)

go_library(
    name = "engine_postgresql_library",
    srcs = ["main.go"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/engine",
    visibility = ["//visibility:private"],
    deps = [
        ":engine_postgresql_database",
    ],
)

go_library(
    name = "engine_mysql_library",
    srcs = ["main.go"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/engine",
    visibility = ["//visibility:private"],
    deps = [
        ":engine_mysql_database",
    ],
)

go_test(
    name = "engine_postgresql_test",
    srcs = ["engine_postgresql_test.go"],
    embed = [":engine_postgresql_library"],
    visibility = ["//visibility:public"],
    deps = [
        ":engine_postgresql_database",
    ],
)

go_test(
    name = "engine_mysql_test",
    srcs = ["engine_mysql_test.go"],
    embed = [":engine_mysql_library"],
    visibility = ["//visibility:public"],
    deps = [
        ":engine_mysql_database",
    ],
)

test_suite(
    name = "engine",
    tests = [
        "engine_mysql_test",
        "engine_postgresql_test",
    ],
)
