# Copyright 2020 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//sqlc:def.bzl", "sqlc_package")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/plezentek/bazel-sqlc/tests/features/interface
gazelle(name = "gazelle")

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

sqlc_package(
    name = "interface_enabled_sqlc",
    emit_interface = True,
    package = "database",
    queries = ["query.sql"],
    schema = ["schema.sql"],
)

sqlc_package(
    name = "interface_disabled_sqlc",
    emit_interface = False,
    queries = ["query.sql"],
    schema = ["schema.sql"],
)

go_library(
    name = "interface_enabled_database",
    srcs = [":interface_enabled_sqlc"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/interface/database",
    visibility = [":__subpackages__"],
)

go_library(
    name = "interface_enabled_library",
    srcs = ["main.go"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/interface",
    visibility = ["//visibility:private"],
    deps = [
        ":interface_enabled_database",
    ],
)

go_test(
    name = "interface_enabled_test",
    srcs = ["interface_enabled_test.go"],
    embed = [":interface_enabled_library"],
    visibility = ["//visibility:public"],
    deps = [":interface_enabled_database"],
)

sh_test(
    name = "interface_disabled_test",
    srcs = ["interface_disabled_test.sh"],
    args = ["$(locations :interface_disabled_sqlc)"],
    data = [
        ":interface_disabled_sqlc",
    ],
)

test_suite(
    name = "interface",
    tests = [
        "interface_disabled_test",
        "interface_enabled_test",
    ],
)
