# Copyright 2020 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//sqlc:def.bzl", "sqlc_package")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/plezentek/bazel-sqlc/tests/features/json_tags
gazelle(name = "gazelle")

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

sqlc_package(
    name = "json_tags_enabled_sqlc",
    emit_json_tags = True,
    package = "enabled_database",
    queries = ["query.sql"],
    schema = ["schema.sql"],
)

sqlc_package(
    name = "json_tags_disabled_sqlc",
    emit_json_tags = False,
    package = "disabled_database",
    queries = ["query.sql"],
    schema = ["schema.sql"],
)

go_library(
    name = "json_tags_enabled_database",
    srcs = [":json_tags_enabled_sqlc"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/json_tags/enabled_database",
    visibility = [":__subpackages__"],
)

go_library(
    name = "json_tags_disabled_database",
    srcs = [":json_tags_disabled_sqlc"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/json_tags/disabled_database",
    visibility = [":__subpackages__"],
)

go_library(
    name = "json_tags_enabled_library",
    srcs = ["main.go"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/json_tags",
    visibility = ["//visibility:private"],
    deps = [
        ":json_tags_enabled_database",
    ],
)

go_library(
    name = "json_tags_disabled_library",
    srcs = ["main.go"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/json_tags",
    visibility = ["//visibility:private"],
    deps = [
        ":json_tags_disabled_database",
    ],
)

go_test(
    name = "json_tags_enabled_test",
    srcs = ["tags_enabled_test.go"],
    embed = [":json_tags_enabled_library"],
    visibility = ["//visibility:public"],
    deps = [
        ":json_tags_enabled_database",
    ],
)

go_test(
    name = "json_tags_disabled_test",
    srcs = ["tags_disabled_test.go"],
    embed = [":json_tags_disabled_library"],
    visibility = ["//visibility:public"],
    deps = [
        ":json_tags_disabled_database",
    ],
)

test_suite(
    name = "json_tags",
    tests = [
        "json_tags_disabled_test",
        "json_tags_enabled_test",
    ],
)
