# Copyright 2020 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//sqlc:def.bzl", "sqlc_package")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/plezentek/bazel-sqlc/tests/features/overrides
gazelle(name = "gazelle")

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

sqlc_package(
    name = "overrides_enabled_sqlc",
    overrides = {
        "uuid": "github.com/gofrs/uuid.UUID",
        "uuid:nullable": "github.com/gofrs/uuid.UUID",
        "blob": "github.com/gofrs/uuid.UUID",
        "blob:nullable": "github.com/gofrs/uuid.UUID",
        "date": "github.com/gofrs/uuid.UUID",
        "date:nullable": "github.com/gofrs/uuid.UUID",
    },
    package = "enabled_database",
    queries = ["query.sql"],
    schema = ["schema.sql"],
)

sqlc_package(
    name = "overrides_column_enabled_sqlc",
    overrides = {
        "releases.type16": "github.com/gofrs/uuid.UUID",
        "releases.type38": "github.com/gofrs/uuid.UUID",
    },
    package = "column_enabled_database",
    queries = ["query.sql"],
    schema = ["schema.sql"],
)

sqlc_package(
    name = "overrides_disabled_sqlc",
    package = "disabled_database",
    queries = ["query.sql"],
    schema = ["schema.sql"],
)

go_library(
    name = "overrides_enabled_database",
    srcs = [":overrides_enabled_sqlc"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/overrides/enabled_database",
    visibility = [":__subpackages__"],
    deps = [
        "@com_github_gofrs_uuid//:uuid",
    ],
)

go_library(
    name = "overrides_column_enabled_database",
    srcs = [":overrides_column_enabled_sqlc"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/overrides/column_enabled_database",
    visibility = [":__subpackages__"],
    deps = [
        "@com_github_gofrs_uuid//:uuid",
    ],
)

go_library(
    name = "overrides_disabled_database",
    srcs = [":overrides_disabled_sqlc"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/overrides/disabled_database",
    visibility = [":__subpackages__"],
    deps = [
        "@com_github_google_uuid//:uuid",
    ],
)

go_library(
    name = "overrides_enabled_library",
    srcs = ["main.go"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/overrides",
    visibility = ["//visibility:private"],
    deps = [
        ":overrides_enabled_database",
        "@com_github_gofrs_uuid//:uuid",
    ],
)

go_library(
    name = "overrides_column_enabled_library",
    srcs = ["main.go"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/overrides",
    visibility = ["//visibility:private"],
    deps = [
        ":overrides_column_enabled_database",
        "@com_github_gofrs_uuid//:uuid",
    ],
)

go_library(
    name = "overrides_disabled_library",
    srcs = ["main.go"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/overrides",
    visibility = ["//visibility:private"],
    deps = [
        ":overrides_disabled_database",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "overrides_enabled_test",
    srcs = ["overrides_enabled_test.go"],
    embed = [":overrides_enabled_library"],
    visibility = ["//visibility:public"],
    deps = [
        ":overrides_enabled_database",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "overrides_column_enabled_test",
    srcs = ["overrides_column_enabled_test.go"],
    embed = [":overrides_column_enabled_library"],
    visibility = ["//visibility:public"],
    deps = [
        ":overrides_column_enabled_database",
        "@com_github_gofrs_uuid//:uuid",
    ],
)

go_test(
    name = "overrides_disabled_test",
    srcs = ["overrides_disabled_test.go"],
    embed = [":overrides_disabled_library"],
    visibility = ["//visibility:public"],
    deps = [
        ":overrides_disabled_database",
        "@com_github_google_uuid//:uuid",
    ],
)

test_suite(
    name = "overrides",
    tests = [
        "overrides_column_enabled_test",
        "overrides_disabled_test",
        "overrides_enabled_test",
    ],
)
