# Copyright 2020 Plezentek, Inc. All rights reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//sqlc:def.bzl", "sqlc_package")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/plezentek/bazel-sqlc/tests/features/table_names
gazelle(name = "gazelle")

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

sqlc_package(
    name = "table_names_exact_sqlc",
    emit_exact_table_names = True,
    package = "exact_database",
    queries = ["query.sql"],
    schema = ["schema.sql"],
)

sqlc_package(
    name = "table_names_cleaned_sqlc",
    emit_exact_table_names = False,
    package = "cleaned_database",
    queries = ["query.sql"],
    schema = ["schema.sql"],
)

go_library(
    name = "table_names_exact_database",
    srcs = [":table_names_exact_sqlc"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/table_names/exact_database",
    visibility = [":__subpackages__"],
)

go_library(
    name = "table_names_cleaned_database",
    srcs = [":table_names_cleaned_sqlc"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/table_names/cleaned_database",
    visibility = [":__subpackages__"],
)

go_library(
    name = "table_names_exact_library",
    srcs = ["main.go"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/table_names",
    visibility = ["//visibility:private"],
    deps = [
        ":table_names_exact_database",
    ],
)

go_library(
    name = "table_names_cleaned_library",
    srcs = ["main.go"],
    importpath = "github.com/plezentek/bazel-sqlc/tests/features/table_names",
    visibility = ["//visibility:private"],
    deps = [
        ":table_names_cleaned_database",
    ],
)

go_test(
    name = "table_names_exact_test",
    srcs = ["table_names_exact_test.go"],
    embed = [":table_names_exact_library"],
    visibility = ["//visibility:public"],
    deps = [
        ":table_names_exact_database",
    ],
)

go_test(
    name = "table_names_cleaned_test",
    srcs = ["table_names_cleaned_test.go"],
    embed = [":table_names_cleaned_library"],
    visibility = ["//visibility:public"],
    deps = [
        ":table_names_cleaned_database",
    ],
)

test_suite(
    name = "table_names",
    tests = [
        "table_names_cleaned_test",
        "table_names_exact_test",
    ],
)
